style: add font color

--- a/frontend/src/components/todoList/TodoList.css
+++ b/frontend/src/components/todoList/TodoList.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #adadad;
+  color: #4d4d4d;
 }
 
 .task-input {
